--- a/EcommerceProject/appsettings.json
+++ b/EcommerceProject/appsettings.json
@@ -2,12 +2,25 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      //"Microsoft.AspNetCore": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Ecommerce_connection": "Server=DESKTOP-FBEFNEM\\SQLEXPRESS01; Database=Ecommerce; Trusted_Connection=true;TrustServerCertificate=true"
-  }
+  },
+  
+    "Smtp": {
+      "Host": "smtp.gmail.com",
+      "Port": 587,
+      "EnableSSL": true,
+      "EmailFrom": "mahitosh.runtime@gmail.com",
+      "Username": "mahitosh.runtime@gmail.com",
+      "Password": "zorfqhzdulxxtprs" // use app password if two-factor authentication is enabled
+    }
+  
+
 
 }
