--- a/EcommerceProject/appsettings.Production.json
+++ b/EcommerceProject/appsettings.Production.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Ecommerce_connection": "Server=DESKTOP-FBEFNEM\\SQLEXPRESS01; Database=Ecommerce; Trusted_Connection=true;TrustServerCertificate=true"
+  },
+  "Smtp": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSSL": true,
+    "EmailFrom": "mahitosh.runtime@gmail.com",
+    "Username": "mahitosh.runtime@gmail.com",
+    "Password": "zorfqhzdulxxtprs" // use app password if two-factor authentication is enabled
   }
 }
