Moved SMTP configuration to environment variables for security

--- a/EcommerceProject/appsettings.Production.json
+++ b/EcommerceProject/appsettings.Production.json
@@ -10,11 +10,12 @@
     "Ecommerce_connection": "Server=DESKTOP-FBEFNEM\\SQLEXPRESS01; Database=Ecommerce; Trusted_Connection=true;TrustServerCertificate=true"
   },
   "Smtp": {
-    "Host": "smtp.gmail.com",
-    "Port": 587,
-    "EnableSSL": true,
-    "EmailFrom": "mahitosh.runtime@gmail.com",
-    "Username": "mahitosh.runtime@gmail.com",
-    "Password": "zorfqhzdulxxtprs" // use app password if two-factor authentication is enabled
+    "Host": "${SMTP_HOST}",
+    "Port": "${SMTP_PORT}",
+    "EnableSSL": "${SMTP_ENABLESSL}",
+    "EmailFrom": "${SMTP_EMAILFROM}",
+    "Username": "${SMTP_USERNAME}",
+    "Password": "${SMTP_PASSWORD}"
   }
+
 }
