--- a/EcommerceProject/appsettings.Production.json
+++ b/EcommerceProject/appsettings.Production.json
@@ -16,6 +16,15 @@
     "EmailFrom": "${SMTP_EMAILFROM}",
     "Username": "${SMTP_USERNAME}",
     "Password": "${SMTP_PASSWORD}"
+  },
+
+  "JwtSettings": {
+    "Issuer": "http://localhost:5115",
+    "Audience": "http://localhost:5115",
+    "SecretKey": "YourSuperSecretKey12345",
+    "AccessTokenExpirationMinutes": 30,
+    "RefreshTokenExpirationDays": 7
   }
+
 
 }
