--- a/EcommerceProject/appsettings.json
+++ b/EcommerceProject/appsettings.json
@@ -24,8 +24,8 @@
   "JwtSettings": {
     "Issuer": "http://localhost:5115",
     "Audience": "http://localhost:5115",
-    "SecretKey": "YourSuperSecretKey12345",
-    "AccessTokenExpirationMinutes": 30,
+    "SecretKey": "jewrewowquyeuwqye",
+    "AccessTokenExpirationMinutes": 360,
     "RefreshTokenExpirationDays": 7
   }
 
